--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
   {%- include head.html -%}
 
   <body>
-
+    {%- include modules/includes-mathjax/includes-mathjax.html -%}
     {%- include header.html -%}
 
     <main class="page-content" aria-label="Content">
