:fountain: Adjusts and adds FrontMatter/comments

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,10 @@
-{% comment %}
-  Source: https://raw.githubusercontent.com/jekyll/minima/v2.5.0/_layouts/default.html
-  License: MIT
-{% endcomment %}
+---
+layout: null
+version: 2.5.1
+source: https://raw.githubusercontent.com/jekyll/minima/v2.5.1/_layouts/default.html
+license: MIT
+vim: filetype=liquid
+---
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
